#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(znchelper, 0.3, freakazoid@teamblind.de)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/znchelper.c])
AC_CONFIG_HEADER([config.h])

AC_DEFINE_UNQUOTED(PLUGIN_VERSION, ["0.3"], [Define the plugin version to be used])

AC_DEFINE_UNQUOTED(PLUGIN_WEBSITE, ["http://freakazoid.teamblind.de/"], [Define the plugin website to be used])

AC_DEFINE_UNQUOTED(PLUGIN_ID, ["core-freakazoid-znchelper"], [Define the plugin website to be used])

AC_DEFINE_UNQUOTED(PLUGIN_STATIC_NAME, ["znchelper"], [Define the plugin website to be used])

AC_DEFINE_UNQUOTED(PLUGIN_AUTHOR, ["Konrad Gräfe <freakazoid@teamblind.de>"], [Define the plugin author to be used])


# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INTLTOOL
GETTEXT_PACKAGE=znchelper
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, ["$GETTEXT_PACKAGE"], [Define the gettext package to be used])
ALL_LINGUAS="de"
AM_GLIB_GNU_GETTEXT

# Checks for libraries.
PKG_CHECK_MODULES(purple, [purple >= 2.6.0], , [AC_MSG_ERROR(purple >= 2.6.0 required!)])
LIBS="$LIBS $purple_LIBS"
CFLAGS="$CFLAGS $purple_CFLAGS -Wall"


# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
		 po/Makefile.in])
AC_OUTPUT
